--- a/Frontend/src/components/newsContainer/newsContainer.scss
+++ b/Frontend/src/components/newsContainer/newsContainer.scss
@@ -9,9 +9,18 @@
     background-color: white;
     box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.25);
     position: absolute;
-    left: 65vw;
+    left: 67vw;
     top: 2vh;
     z-index: 2;
+    h2{
+        color: #414941;
+        text-align: left;
+    }
+    img{
+        max-width: 560px;
+        max-height: 310px;
+        object-fit: cover;
+    }
     .close-icon{
         position: absolute;
         right: 10px;
