--- a/Frontend/src/components/newsContainer/newsContainer.scss
+++ b/Frontend/src/components/newsContainer/newsContainer.scss
@@ -1,7 +1,8 @@
 .news-container{
-    width: 590px;
+    width: 500px;
     border-radius: 16px;
     max-height: 840px;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -9,17 +10,25 @@
     background-color: white;
     box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.25);
     position: absolute;
-    left: 67vw;
+    right: 1vw;
     top: 2vh;
     z-index: 2;
     h2{
         color: #414941;
         text-align: left;
+        margin-top: 0px;
+        font-size: 1.3em;
+        width: 95%;
     }
     img{
         max-width: 560px;
         max-height: 310px;
         object-fit: cover;
+    }
+    .news-text{
+        margin-top: 5px;
+        font-size: 14px;
+        text-align: justify;
     }
     .close-icon{
         position: absolute;
