--- a/Frontend/src/components/searchNewsPanel/searchNewsPanel.scss
+++ b/Frontend/src/components/searchNewsPanel/searchNewsPanel.scss
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 520px;
-    max-height: 570px;
+    width: 28vw;
+    max-height: 60vh;
     position: absolute;
     left: 1vw;
     top: 2vh;
@@ -25,7 +25,7 @@
     .search-news-input{
         border: 1px solid #C1C9BE;
         border-radius: 15px;
-        height: 40px;
+        height: 4vh;
         width: 95%;
         margin: 5px;
         padding: 5px;
@@ -41,7 +41,7 @@
             flex-direction: row;
             justify-content: space-between;
             text-align: left;
-            max-height: 157px;
+            max-height: 16vh;
             border: 1px solid #C1C9BE;
             border-radius: 1px;
             margin-top: 5px;
@@ -51,18 +51,18 @@
                 flex-direction: column;
                 padding: 16px;
                 overflow: hidden;
-                font-size: 14px;
+                font-size: 13px;
                 color: #414941;
                 h3 {
                     margin-top: 0px;
                     margin-bottom: 0px;
                     color: #414941;
-                    font-size: 16px;
+                    font-size: 15px;
                 }
             }
             img{
-                max-width: 122px;
-                max-height: 146px;
+                max-width: 7vw;
+                max-height: 15vh;
                 object-fit: cover;
                 border-radius: 5px;
                 margin: 5px;
