--- a/Frontend/src/components/userPanel/userPanel.scss
+++ b/Frontend/src/components/userPanel/userPanel.scss
@@ -38,6 +38,7 @@
             font-size: 16px;
             font-weight: 600;
             color: #1A1C19;
+            user-select: none;
         }
     }
     svg{
@@ -60,8 +61,40 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        
-        
+        font-size: 20px;
+        font-weight: 500;
+        color: #00210A;
+        .user-settings-header{
+            margin-top: 10px;
+            width: 75%;
+            span{
+                text-align: left;
+            }
+        }
+        button{
+            margin-top: 10px;
+            background-color: #D3E8D2;
+            border: none;
+            width: 90%;
+            height: 7%;
+            border-radius: 16px;
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+            svg{
+                margin-left: 10px;
+            }
+            span{
+                color: #00210A;
+                font-weight: 500;
+                font-size: 16px;
+                margin-left: 10px;
+                margin-top: 1px;
+            }
+        }
+        .user-settings-active{
+            background-color: #B7CCB6;
+        }
     }
     .user-settings-change{
         width: 75%;
