--- a/Frontend/src/components/searchNewsPanel/searchNewsPanel.scss
+++ b/Frontend/src/components/searchNewsPanel/searchNewsPanel.scss
@@ -32,7 +32,7 @@
         text-indent: 5px;
     }
     .search-news-blocks {
-        overflow: hidden;
+        overflow: auto;
         .active{
             border: 1px solid #006D31!important;
         }
