--- a/Frontend/src/App.scss
+++ b/Frontend/src/App.scss
@@ -1,5 +1,23 @@
 .App {
   text-align: center;
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  } 
 }
 a{
   color:#006D31
