--- a/Frontend/src/components/userPanel/userPanel.scss
+++ b/Frontend/src/components/userPanel/userPanel.scss
@@ -101,5 +101,33 @@
         height: 100%;
         background-color: #E2E3DE;
         border-radius: 16px;
+        display: flex;
+        flex-direction: column;
+        .user-settings-header{
+            margin-top: 10px;
+            width: 100%;
+            span{
+                font-size: 20px;
+                font-weight: 500;
+                text-align: left;
+                margin-left: 40px;
+            }
+        }
+        svg{
+            width: 20%;
+            height: 20%;
+            margin: 20px;
+        }
+        .user-settings-button{
+            margin: 15px;
+            height: 30px;
+            width: 40%;
+            background-color: #006D31;
+            color: white;
+            border-radius: 17px;
+            border-color: #006D31;
+            font-size: 14px;
+            cursor: pointer;
+        }
     }
 }
