Mark offset fix

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.ymaps-2-1-79-image {
+  transform: translateX(-50%);
+}
